--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -52,6 +52,10 @@
             }
         }
 
+        &.past {
+            filter: brightness(0.8);
+        }
+
         &.count-1 {
             width: 100%;
         }
