--- a/src/app/components/user-list/user-list.component.scss
+++ b/src/app/components/user-list/user-list.component.scss
@@ -1,12 +1,22 @@
 .user-list-container {
-    display: flex;
-    flex-direction: row;
     gap: 20px;
 }
 
 h3 {
     margin: 0;
     text-align: center;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.6;
+    margin: 0;
+}
+
+label {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 4px;
 }
 
 mat-divider {
@@ -22,34 +32,16 @@ mat-divider {
 }
 
 .selected-user {
-    display: flex;
-    flex-direction: column;
-
     &__details {
         flex: 1;
     }
 
     &__classes {
-        display: flex;
-        flex-direction: column;
         flex: 1;
-
-        label {
-            font-weight: 600;
-            margin-bottom: 5px;
-        }
     }
 }
 
 .form-group {
-    display: flex;
-    flex-direction: column;
-
-    label {
-        font-weight: 600;
-        margin-bottom: 5px;
-    }
-
     input {
         padding: 8px;
         border: 1px solid #ccc;
@@ -84,7 +76,6 @@ mat-divider {
 }
 
 .membership-group {
-    display: flex;
     width: 150px;
     position: relative;
 
@@ -104,6 +95,7 @@ mat-divider {
 
 .utility-btn {
     cursor: pointer;
+    position: absolute;
 
     mat-icon {
         font-size: 24px;
@@ -119,15 +111,10 @@ mat-divider {
     }
 
     &_details {
-        position: absolute;
         right: 0px;
-        // background: var(--light-color);
-        // height: 24px;
-        // border-radius: 4px;
     }
 
     &_class-edit {
-        position: absolute;
         top: 2px;
         right: 42px;
         background: var(--light-color);
@@ -136,7 +123,6 @@ mat-divider {
     }
 
     &_class-cancel {
-        position: absolute;
         top: 2px;
         right: 2px;
         background: var(--light-color);
@@ -201,8 +187,6 @@ mat-divider {
 
 // USERS BOX
 .users-box {
-    display: flex;
-    flex-direction: column;
     flex: 1;
     max-width: 300px;
     background: var(--bright-alt-color);
@@ -212,9 +196,6 @@ mat-divider {
 }
 
 .search-bar {
-    display: flex;
-    justify-content: center;
-
     input {
         padding: 8px;
         border: 1px solid #ccc;
@@ -229,8 +210,7 @@ mat-divider {
 }
 
 .users-list {
-    display: flex;
-    flex-direction: column;
+    justify-content: flex-start;
     border-radius: 4px;
     margin-top: 10px;
     overflow-y: auto;
@@ -238,8 +218,7 @@ mat-divider {
 }
 
 .user-item {
-    display: flex;
-    align-items: center;
+    justify-content: flex-start;
     padding: 10px;
     cursor: pointer;
     transition: background-color 0.3s;
