--- a/src/app/components/admin-timeline/admin-timeline.component.scss
+++ b/src/app/components/admin-timeline/admin-timeline.component.scss
@@ -75,6 +75,18 @@ mat-form-field {
     .relative {
         position: relative;
     }
+
+    &__delete {
+        cursor: pointer;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
+.selected {
+    font-weight: 600;
 }
 
 .utility-btn {
