new style features

--- a/src/app/components/admin-timeline/admin-timeline.component.html
+++ b/src/app/components/admin-timeline/admin-timeline.component.html
@@ -19,7 +19,7 @@
 
     <!-- Display Box -->
     <div class="display-box">
-        <div class="flex-row">
+        <div class="flex-row center-row">
             <h3>Карточка занятия</h3>
             <p class="display-box__delete" [ngClass]="selectedClass ? 'selected' : ''"
                 (click)="deleteClass(selectedClass)">удалить занятие</p>
