--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -6,7 +6,7 @@
     <div class="flex-row center-col flex-grow main-wrapper">
         <div class="w-h-100 content">
             <div class="flex-col center-col left-col">
-                <h3 class="cards__title">Почему <span class="sigma-font">ΣΙΓΜΑ</span> ?</h3>
+                <h3 class="cards__title">Почему ΣΙΓΜΑ?</h3>
                 <div class="flex-col center-col flex-grow">
                     <div class="center-row cards">
                         <mat-card *ngFor="let card of cards" class="flex-col w-h-100 card">
