--- a/src/app/components/new-class-form/new-class-form.component.scss
+++ b/src/app/components/new-class-form/new-class-form.component.scss
@@ -107,7 +107,10 @@ form {
     }
 
     input {
+        background: #fff;
         height: 20px;
+        color: #000;
+        font-size: 16px;
     }
 
     .input {
