--- a/src/app/components/new-class-form/new-class-form.component.scss
+++ b/src/app/components/new-class-form/new-class-form.component.scss
@@ -116,13 +116,17 @@ form {
     .input {
         padding: 10px;
         margin-top: 4px;
-        margin-bottom: 6px;
+        margin-bottom: 8px;
         border-radius: 4px;
         border: 1px solid #ccc;
 
         &_time {
             margin: 0;
         }
+    }
+
+    app-timeline {
+        margin-bottom: 8px;
     }
 
     .textarea {
